--- a/gps-react-app/src/styles/App.css
+++ b/gps-react-app/src/styles/App.css
@@ -15,6 +15,7 @@
     min-height: 0;
     padding-bottom: 7rem;
     margin: 100px 17% 15px;
+    transition: 0.3s;
 }
 
 a {
@@ -37,6 +38,8 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: 0.3s;
+    z-index: 99;
 }
 
 .NavLogo {
@@ -126,6 +129,7 @@ footer {
     padding: 15px 17%;
     background-color: black;
     align-items: center;
+    transition: 0.3s;
 }
 
 footer .row {
@@ -133,6 +137,7 @@ footer .row {
     float: right;
     display: flex;
     flex-direction: column;
+    transition: 0.3s;
 }
 
 footer .row:first-child {
@@ -186,4 +191,53 @@ footer .row:nth-child(2) {
 
 .row a:last-child {
     padding-bottom: 0;
+}
+
+
+
+/* Responsiveness */
+@media (max-width: 1250px) {
+    .Nav {
+        padding: 0 10%;
+    }
+
+    .Body {
+        margin: 100px 10% 15px;
+    }
+
+    footer {
+        padding: 15px 10%;
+    }
+}
+
+@media (max-width: 1050px) {
+    .Nav {
+        padding: 0 15px;
+    }
+
+    .Body {
+        margin: 100px 15px 15px;
+    }
+
+    footer {
+        padding: 15px;
+    }
+}
+
+@media (max-width: 850px) {
+    .NavLink, .NavTranslate, .NavProfile, .NavDropdown .dropdown-button {
+        margin: 0 1%;
+    }
+
+    .NavLogo {
+        margin-right: 1%;
+    }
+
+    .NavTranslate {
+        margin-left: auto;
+    }
+
+    footer .row {
+        margin: 0 2%;
+    }
 }
