--- a/gps-react-app/src/styles/ContentCreator/AddAndUpdateApplicationPage.css
+++ b/gps-react-app/src/styles/ContentCreator/AddAndUpdateApplicationPage.css
@@ -1,267 +1,196 @@
-@media {
-    .container {
-        display: grid;
-        grid-template-rows: auto auto auto auto;
-        grid-gap: 10px;
-        padding: 0px;
-        width: 80%;
-        margin-left: 10%;
-        margin-right: 10%;
-        height: 100%;
-        grid-column-gap: 10px;
-    }
+.container {
+    display: block;
 }
 
 input[type="file"] {
     display: none;
 }
 
-/*layer 1*/
-.buttonsLeft{
-    float: right;
+.app-controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.DoneButton {
-    margin-left: 15px;
-    transition: 0.5s;
-    color: white;
-    background-color: rgb(75, 216, 100);
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    border: 0px solid #444;
-    border-radius: 20px;
-    padding: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    display: inline-block;
+.icon {
+    height: 60px;
+    width: 60px;
+    border: 1.2px solid darkgrey;
+    border-radius: 15px;
+    margin: 0;
+}
 
-}
-.PreviewButton {
-    margin-left: 15px;
-    color: white;
-    background-color: rgb(19, 101, 245);
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    border-radius: 20px;
-    padding: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    border: 0px solid #444;
-    transition: 0.5s;
-    display: inline-block;
-}
-.name{
-    display: inline-block;
-    margin-left: 20px;
-    margin-top: 5px;
+.container h1 {
+    color: black;
     font-size: 40px;
-}
-hr.topLine {
-    margin-top: -30px;
-    padding-bottom: 5px;
-    border-top: 1px lightgray;
-    border-left: transparent;
-    border-right: transparent;
-}
-.icon{
-    border-radius: 10px;
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-    float: left;
-    margin-left: 30px;
+    font-weight: normal;
+    margin-left: 10px;
+    word-break: break-word;
 }
 
-/*layer 2*/
-.basic_Info {
-    display: table-row;
-}
-hr.line {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-top: 1px lightgray;
-    border-left: transparent;
-    border-right: transparent;
-}
-
-.IconLabel{
-    position: absolute;
-    display: inline-block;
-    margin: 5px;
-    margin-left: 20px;
-    font-size: 20px;
-}
-.addIconButton{
-    display: inline-block;
-    transition: 0.5s;
-    background-color: rgba(68, 68, 68, 0.70);
+.preview-button, .done-button {
+    cursor: pointer;
+    height: 35px;
+    width: 125px;
+    margin-left: 10px;
     text-align: center;
-    margin-left: 20px;
-;
+    color: white;
+    font-size: 15px;
+    border-radius: 50px;
+    transition: 0.3s;
+    border: none;
 }
-.BigIcon{
-    border-radius: 25px;
-    display: inline-block;
-    width: 150px;
+
+.preview-button:hover, .done-button:hover, .icon-controls label:hover, .screenshots-header label:hover, .delete-screenshot-button:hover {
+    opacity: 50%;
+}
+
+.preview-button {
+    background-color: royalblue;
+    margin-left: auto;
+}
+
+.done-button {
+    background-color: lawngreen;
+}
+
+.container hr {
+    border: 0.5px solid lightgrey;
+    margin: 10px 0;
+}
+
+.container h2 {
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.app-icon, .app-name {
+    display: flex;
+    align-items: flex-start;
+}
+
+.icon-controls {
+    position: relative;
     height: 150px;
-    margin-left: 80px;
+    width: 150px;
 }
-.Add-Icon {
+
+.icon-controls img {
+    height: 144px;
+    width: 144px;
+    border: 3px solid darkgrey;
+    border-radius: 37.5px;
+    filter: blur(3px);
+    -webkit-filter: blur(3px);
+}
+
+.icon-controls label {
     position: absolute;
-    margin-left: -135px;
-    margin-top: 100px;
-    transition: 0.5s;
+    left: 75%;
+    bottom: 75%;
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
+    background-color: royalblue;
+    border-radius: 50px;
     color: white;
-    background-color: rgb(253, 56, 35);
+    text-align: center;
+    transition: 0.3s;
+}
+
+.icon-controls p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+label .edit-icon {
+    height: 12px;
+}
+
+.app-name {
+    display: flex;
+    align-items: center;
+}
+
+.app-name input {
+    height: 35px;
+    width: 150px;
+    padding: 0 15px;
+    background-color: #f2f2f2;
+    border: 1px solid dimgrey;
+    font-size: 15px;
+    border-radius: 50px;
+}
+
+.screenshots-header {
+    display: flex;
+    align-items: flex-end;
+}
+
+.screenshots-header label {
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.add-screenshot-icon {
+    height: 25px;
+    color: royalblue;
+}
+
+.loading-screenshot {
+    margin-left: 20px;
+    display: inline-block;
+}
+
+.screenshots-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -5px -15px -15px 0;
+}
+
+.screenshot {
+    position: relative;
+    height: 300px;
+    width: 30em;
+    margin: 0 15px 15px 0;
+}
+
+.screenshot img {
+    height: 300px;
+    width: 30em;
+    border-radius: 20px;
+}
+
+.delete-screenshot-button {
+    position: absolute;
+    left: 92%;
+    bottom: 88%;
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
+    background-color: red;
+    border: none;
+    border-radius: 50px;
+    color: white;
+    font-size: 30px;
     text-align: center;
     text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    border: 0px solid #444;
-    border-radius: 20px;
-    padding: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-.IconLoading{
-    position: absolute;
-    margin-left: 20px;
-    display: inline-block;
+    transition: 0.3s;
+    line-height: 15px;
+    padding: 0 0 5px 0;
 }
 
-/*layer 3*/
-.nameLabel{
-    display: inline-block;
-    margin: 5px;
-    margin-left: 20px;
-    font-size: 20px;
-}
-.InputTitle {
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 20px;
-    border: 1px;
-    background-color: #eaeaea;
-    margin-block-end: 0px;
-    margin-block-start: 10px;
-    display: inline-block;
-}
-
-/*layer 4*/
-.add-Screenshots{
-    margin-top: -20px;
-    margin-left: 20px;
-}
-.screenshotLabel{
-    display: inline-block;
-}
-.Add-screenshot {
-    margin-left: 15px;
-    color: white;
-    background-color: rgb(19, 101, 245);
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    border-radius: 20px;
-    padding: 5px;
-    padding-left: 50px;
-    padding-right: 50px;
-    border: 0px solid #444;
-    transition: 0.5s;
-    display: inline-block;
-}
-.ScreenshotLoading{
-    margin-left: 20px;
-    display: inline-block;
-}
-
-.images {
-    line-break: auto;
-    display: inline;
-}
-.image {
-    display: inline-block;
-    float: left;
-    width: 400px;
-    height: 333px;
-    margin-left: 15px;
-    margin-top: -10px;
-}
-.RemoveImage{
-    position: absolute;
-    margin-left: -370px;
-    margin-top: 280px;
-    transition: 0.5s;
-    color: white;
-    background-color: rgb(253, 56, 35);
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    border: 0px solid #444;
-    border-radius: 20px;
-    padding: 10px;
-    padding-left: 150px;
-    padding-right: 150px;
-}
-
-/*layer 3*/
-.reviews {
-    display: table-row;
-}
-
-/*layer 4*/
-.other_Info {
-    display: table;
-}
-.DescriptionText{
-    font-size: 20px;
-    margin-left: 20px;
-    margin-top: -5px;
-    margin-bottom: -7px;
-}
-.Description {
+.description-field {
     width: 100%;
-    padding-bottom: 100px ;
-    font-size: 20px;
-    font-weight: bold;
+    margin-top: 10px;
+    padding: 15px 15px 100px 15px;
+    background-color: #f2f2f2;
+    border: 1px solid dimgrey;
+    font-size: 15px;
     border-radius: 20px;
-    border: 1px;
-    background-color: #eaeaea;
-    margin-block-end: 0px;
-    margin-block-start: 10px;
-    display: inline-block;
-    margin-left: 20px;
-}
-
-.AppLoading{
-    display: inline-block;
-    margin-left: 15px;
-}
-.AppLabel{
-    margin-top: -25px;
-    margin-bottom: -25px;
-    display: inline-block;
-    margin-left: 20px;
-}
-.Add-app{
-    margin-left: 15px;
-    color: white;
-    background-color: rgb(19, 101, 245);
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    border-radius: 20px;
-    padding: 5px;
-    padding-left: 50px;
-    padding-right: 50px;
-    border: 0px solid #444;
-    transition: 0.5s;
-    display: inline-block;
 }
