--- a/gps-react-app/src/styles/ContentCreator/ApplicationPage.css
+++ b/gps-react-app/src/styles/ContentCreator/ApplicationPage.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: 'Days One';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../../fonts/days-one-v14-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+    url('../../fonts/days-one-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../../fonts/days-one-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../../fonts/days-one-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+    url('../../fonts/days-one-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../../fonts/days-one-v14-latin-regular.svg#DaysOne') format('svg'); /* Legacy iOS */
+}
+
 .app {
     display: block;
 }
@@ -21,12 +34,13 @@
     font-size: 40px;
     font-weight: normal;
     margin-left: 10px;
+    word-break: break-word;
 }
 
 .category {
     height: 33.6px;
     width: auto;
-    margin-left: 10px;
+    margin: 0 10px;
     text-align: center;
     color: darkgrey;
     background-color: inherit;
@@ -119,9 +133,8 @@
 }
 
 .menu-wrapper {
-    max-width: 100%;
-    height: 300px;
-    overflow-x: hidden;
+    height: 320px;
+    overflow-x: scroll;
     overflow-y: hidden;
 }
 
@@ -129,16 +142,14 @@
     height: 320px;
     box-sizing: border-box;
     white-space: nowrap;
-    overflow-x: auto;
-    overflow-y: hidden;
-    -webkit-overflow-scrolling: touch;
-    padding: 0 0 20px 0;
+    overflow: inherit;
+    padding: 0;
 }
 
 .menu .item {
     display: inline-block;
     width: 30em;
-    height: 297px;
+    height: 300px;
     margin-right: 15px;
 }
 
@@ -205,7 +216,6 @@
 
 .overall-rating {
     display: flex;
-    flex-direction: row;
     align-items: baseline;
     color: black;
     font-size: 25px;
@@ -214,7 +224,7 @@
 }
 
 .overall-rating p {
-    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", "Arial", "sans-serif";
+    font-family: "Days One", "sans-serif";
 }
 
 .rating-number {
