--- a/gps-react-app/src/styles/ContentCreator/MyAppsPage/MyAppsPage.css
+++ b/gps-react-app/src/styles/ContentCreator/MyAppsPage/MyAppsPage.css
@@ -12,7 +12,7 @@
 
 .add-icon {
     height: 25px;
-    margin: 8px 0 0 15px;
+    margin: 8px 10px 0 15px;
     color: red;
     transition: 0.3s;
 }
