--- a/gps-react-app/src/styles/Authentication&Authorisation/login.css
+++ b/gps-react-app/src/styles/Authentication&Authorisation/login.css
@@ -1,53 +1,59 @@
-.login-container{
-    width:400px;
-    height:500px;
+.LogIn {
+    background-color: #7d0000;
+    background-image: linear-gradient(180deg, #7d0000 0%, #ff0000 50%, #820000 100%);
+
+
+
+
+
+
+    padding: 30px;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    border: 1px solid #dbdbdb;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 10vh auto 10vh;
-    background-color: white;
-    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    align-items: center;
+    width: 400px;
+    margin: 20vh auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .1), 0 6px 20px 0 rgba(0, 0, 0, .1);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 }
 
-
-.login-logo{
-    height: 140px;
-    width: 200px;
-    align-self: center;
-}
-.login-input{
-    width: 97%;
-    border: 1px solid black;
-    padding: 5px;
-    margin: 2px 0;
-    border-radius: 5px;
-    background-color: rgba(128, 128, 128, 0.12);
-    box-shadow: none;
-    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-
-}
-
-.login-button{
-    cursor: pointer;
-    width: 100%;
-    margin: 5px 0;
-    background-color: #c20c0c;
-    padding: 5px 0;
-    font-weight: 600;
-    border: none;
-    color: #F4FFF8;
-    border-radius: 5px;
-    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-}
-.login-button:hover {
-    background-color: rgb(160, 0, 0);
+.LogIn h1 {
+    font-size: 40px;
+    font-weight: normal;
     color: white;
+    margin-bottom: 10px;
 }
 
+.LogInForm {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 
+.LogInForm input, .LogInForm button {
+    height: 35px;
+    margin-top: 15px;
+    padding: 0 10px;
+    border: 1px solid darkgray;
+    font-size: 15px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, .6);
+}
 
+.LogInForm input::placeholder {
+    color: lightgray;
+}
 
+.LogInForm button {
+    cursor: pointer;
+    transition: .3s;
+    background-color: whitesmoke;
+    color: dimgray;
+}
+
+.LogInForm button:hover{
+    filter: brightness(90%);
+}
 
